--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,14 +23,13 @@ jobs:
       - name: Get changed Kotlin files
         id: changed-files
         run: |
-          # Fetch base branch
+          # Fetch the base branch
           git fetch origin ${{ github.base_ref }}
           
-          # Get changed .kt files
           CHANGED_FILES=$(git diff --name-only --diff-filter=ACMR origin/${{ github.base_ref }}...HEAD \
-            | grep '\.kt$' \
-            | paste -sd "," - \
-            || echo "")
+          | grep '\.kt$' \
+          | paste -sd "," - \
+          || echo "")
           
           if [ -n "$CHANGED_FILES" ]; then
             echo "files=$CHANGED_FILES" >> $GITHUB_OUTPUT
